# Case-A3

./: .gitignore  EDA_analysis.ipynb  README.md  app.py  pyproject.toml
app/: app.py  build_faiss.py  prepare_data.py
core/: cleaning.py  genre_normalize.py  main.py  review_analysis.py  vectorize.py
