[project]
name = "case-a3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "onnxruntime-directml>=1.24.4",
    "openai>=2.44.0",
    "optimum[onnxruntime]>=2.1.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.0",
    "text-unidecode>=1.3",
    "tiktoken>=0.13.0",
    "tqdm-joblib>=0.0.5",
    "wordcloud>=1.9.6",
]
